<resources>
    <string name="app_name">UNIAGUSTINIANA</string>
    <string name="matricularse">DATOS USUARIO</string>
    <string name="ingreso">INGRESAR</string>
    <string name="usuario">NOMBRE : </string>
    <string name="pass">CUIDAD : </string>
    <string name="nada"></string>
    <string name="nota">EDAD</string>
    <string name="registrar">REGISTRAR</string>
    <string name="login">LOGIN</string>
</resources>